@@ -3,7 +3,7 @@
 ##
 ## This file is part of the Score-P software (http://www.score-p.org)
 ##
-## Copyright (c) 2014-2017,
+## Copyright (c) 2014-2017, 2019,
 ## Technische Universitaet Dresden, Germany
 ##
 ## Copyright (c) 2015,
@@ -180,4 +180,6 @@ EXTRA_DIST += \
     $(SRC_ROOT)src/adapters/opencl/scorep_opencl_wrap_version_1_0.inc.c \
     $(SRC_ROOT)src/adapters/opencl/scorep_opencl_wrap_version_1_1.inc.c \
     $(SRC_ROOT)src/adapters/opencl/scorep_opencl_wrap_version_1_2.inc.c \
-    $(SRC_ROOT)src/adapters/opencl/scorep_opencl_wrap_version_2_0.inc.c
+    $(SRC_ROOT)src/adapters/opencl/scorep_opencl_wrap_version_2_0.inc.c \
+    $(SRC_ROOT)src/adapters/opencl/scorep_opencl_wrap_version_2_1.inc.c \
+    $(SRC_ROOT)src/adapters/opencl/scorep_opencl_wrap_version_2_2.inc.c
